# edu_robocub_rescue_stack

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
config/: map1.pgm  map1.yaml  map2.pgm  map2.yaml  map_flat_end.pgm  map_flat_end.yaml  map_flat_start.pgm  map_flat_start.yaml  map_plain.pgm  map_plain.yaml  map_ramp.pgm  map_ramp.yaml  map_ramp_end.pgm  map_ramp_end.yaml  map_ramp_start.pgm  map_ramp_start.yaml  mapper_params_online_async.yaml  nav2_params.yaml
edu_robocup_rescue_stack/: edu_robocup_rescue_stack_node.cpp
edu_robocup_rescue_stack_pkg/: CMakeLists.txt  package.xml
edu_robocup_rescue_stack_pkg/src/: edu_robocup_rescue_stack_node.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/edu_robocup_rescue_stack/share/edu_robocup_rescue_stack/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
keepout/: keepout_6.2.yaml  keepout_6.3.yaml  keepout_8.1.pgm  keepout_8.1.yaml  keepout_8.2.pgm  keepout_8.2.xcf  keepout_8.2.yaml  keepout_8.4.pgm  keepout_8.4.yaml  keepout_filter.yaml
lattice_primitives/: config.json
launch/: amcl.launch.py  amcl_4maps.launch.py  edu_control.launch.py  keepout.launch.py  navigation.launch.py  navigation1.launch.py  online_async_launch.py
log/: latest_build
map/: map1.pgm  map2.pgm  map2.yaml  map3.yaml  map_1671210809.pgm  map_4.pgm  map_4.yaml  map_5.1.yaml  map_5.2.pgm  map_5.2.yaml  map_5.3.pgm  map_5.4.pgm  map_5.4.yaml  map_6.2.pgm  map_6.2.yaml  map_6.3.yaml  map_6.4.yaml  map_7.1.yaml  map_8.1.pgm  map_8.1.yaml  map_8.3.yaml  map_8.4.pgm  map_8.4.yaml  map_9.1.pgm  map_9.2.yaml  map_neg.pgm
map/map1/: map1.yaml
map/map4/: map4.pgm
old_file/: nav2_edu_params_OLD.yaml  navigation_OLD.cpp  navigation_with_initialpose.cpp  old_ekf.yaml
params/: nav2_edu_params.yaml
src/: amclLifecycleNode.cpp  amclService.cpp  amclService.h  clientService.cpp  clientService.h  control.cpp  control.h  edu_robocup_rescue_stack_node.cpp  loadMap.cpp  loadMap.h  localisation.cpp  localisation.h  localisationControl.h  localisationControlNode.h  localistionControl.cpp  localistionControlNode.cpp  navigation.cpp  navigation.h
(+37 files in other folders)
